# claude-companions

./: LICENSE  README.md  config.py  inference.py  pyproject.toml  venv_setup.bat
.github/workflows/: hourly_backrooms.yml
app/: __init__.py  personalities.py  server.py  settings.py
app/api/v1/endpoints/: companions.py
app/services/: anthropic_client.py
tests/: test_health.py  test_inference.py
