[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloomed-terminal"
version = "0.1.0"
description = "Compact, persona-backed text-generation API (FastAPI + Transformers)"
authors = [{name="dev-nightshift"}]
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
